# rzd_planner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 091c051264a1_init_users_model.py  1d0f74ac4ddf_changed_foreign_key_in_train_travel_.py  33a7e8fe3812_reworked_travel_times.py  4df23ad0dd42_init_db.py  52a38fce0f22_added_full_routes_model.py  90b8d51c3a24_added_role_field_for_user_model.py  e300f3df344f_added_trains_and_distance_in_full_routes.py  f1c8fc93cad3_init_all_models.py
rzd_planner/: app.py  config.py  main.py  models.py
rzd_planner/assets/: expert_routes_page_style.css  full_routes_style.css  header_style.css  stations_page.css  tables_styles.css  train_page_styles.css  train_type_page_style.css  travel_times_page_style.css
rzd_planner/callbacks/: __init__.py  auth_callbacks.py  check_knowledge_callbacks.py  expert_routes_callbacks.py  main_callbacks.py  planning_page_callbacks.py  stations_callbacks.py  train_callbacks.py  train_travel_times_callbacks.py  train_types_callbacks.py  user_routes_callbacks.py
rzd_planner/layouts/: auth_page.py  main_layout.py
rzd_planner/layouts/components/: del_modal_component.py  header.py  table_component.py  table_header.py
rzd_planner/layouts/expert_pages/: __init__.py  check_knowledge_page.py  routes_page.py  stations_page.py  train_types_page.py
rzd_planner/services/: auth_service.py  knowledge_check_service.py  routes_distance_calc_service.py  schedule_planning_service.py  train_routes_service.py
(+21 files in other folders)
