[tool.poetry]
name = "rzd-planner"
version = "0.1.0"
description = ""
authors = ["kirillkaz <kirillkazazaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.2"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
dash-bootstrap-components = "^1.7.1"
dash-extensions = "^1.0.20"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
